[package]
authors = ["Axesilo <d.matthew.carroll@gmail.com>"]
categories = ["config", "filesystem"]
description = "Library for maintaining configs on disk in a simple, ergonomic way."
edition = "2021"
license-file = "LICENSE"
keywords = ["ilo", "config"]
name = "ilo-config"
readme = "README.md"
repository = "https://github.com/axesilo/ilo-config"
version = "0.2.0"

[dependencies]
envy = "0.4.2"
home = "0.5.9"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"

[dev-dependencies]
# Dependencies needed for examples go here.
reqwest = { version = "0.12.4", features = ["blocking"] }
